# hypergraph-rewriting

./: ChangeLog.md  LICENSE  README.md  default.nix  hypergraph-rewriting.cabal
src/: Match.hs  Rewrite.hs  Rewriting.hs  SMC.hs  Types.hs  Util.hs
src/SMC/: Expr.hs  Hypergraph.hs  Match.hs  Render.hs  Rewrite.hs  Util.hs
test/: Spec.hs  TestExpr.hs  TestHypergraph.hs  TestMatching.hs  TestPaper.hs  Utils.hs
