name:                hypergraph-rewriting
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Paul Wilson
maintainer:          sf@statusfailed.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  exposed-modules:
      Types
    , Rewriting
    , Match
  build-depends:       base, logict, containers, array, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , containers
    , hypergraph-rewriting
    , logict
    , tasty
    , tasty-hunit
  -- other-modules:
  default-language: Haskell2010
