name:                hypergraph-rewriting
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Paul Wilson
maintainer:          sf@statusfailed.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  -- other-modules:
  -- other-extensions:
  exposed-modules:
      SMC
    , SMC.Hypergraph
    , SMC.Match
    , SMC.Expr
    , SMC.Render
  build-depends:
      base
    , logict
    , containers
    , text
    , bimap
    , array
    , mtl
    , vector
    , lens
    , exceptions
    , miso
  hs-source-dirs:      src
  default-language:    Haskell2010

--executable hypergraph-rewriting-js

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hypergraph-rewriting
    , containers
    , text
    , bimap
    , logict
    , tasty
    , tasty-hunit
  -- other-modules:
  default-language: Haskell2010
